# Scribe

./: .gitignore  CMakeLists.txt  HelloWorld.knight  LICENSE  Makefile  README.md  build_and_run.sh  run.sh  test.txt
headers/Editor/: Config.h  Key.h  Row.h
resources/: Preferences.json  preferences.json
resources/syntax/: knight.json
resources/theme/: custom_theme.json
resources/themes/: custom_theme.json
src/: CMakeLists.txt  Config.cpp  Config.hpp  Editor.cpp  Editor.hpp  Exceptions.cpp  Exceptions.hpp  Highlighting.cpp  Highlighting.hpp  Key.hpp  Logger.cpp  Logger.hpp  Main.cpp  Preferences.cpp  Preferences.hpp  Row.cpp  Row.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  Terminal.cpp  Terminal.hpp  UserConfig.cpp  UserConfig.hpp  main.cpp
src/Editor/: Config.cpp  Row.cpp
src/cpp/: Main.cpp
src/cpp/editor/: Editor.cpp  Highlighting.cpp  Preferences.cpp  Row.cpp
src/cpp/editor/terminal/: Terminal.cpp
src/include/editor/: Config.hpp  Editor.hpp  Highlighting.hpp  Preferences.hpp
src/include/editor/terminal/: Terminal.hpp
src/main/: CMakeLists.txt
src/main/cpp/: Config.cpp  Main.cpp  Row.cpp
src/main/cpp/Editor/: Config.cpp  Editor.cpp  Exceptions.cpp  Row.cpp  Terminal.cpp
src/main/cpp/editor/: Config.cpp  Editor.cpp  Highlighting.cpp  Row.cpp  SyntaxHighlighter.cpp
src/main/cpp/editor/exceptions/: Exceptions.cpp
src/main/cpp/editor/highlighting/: Highlighting.cpp
src/main/cpp/editor/highlighting/syntax/: Parser.cpp
src/main/cpp/editor/terminal/: Terminal.cpp
src/main/include/Scribe/: Config.h  Row.h
src/main/include/Scribe/Editor/: Config.h  Editor.h  Terminal.h
src/main/include/editor/: Editor.hpp  Highlighting.hpp  Row.hpp  SyntaxHighlighter.hpp
src/main/include/editor/highlighting/: Highlight.hpp  Highlighting.hpp
src/main/include/editor/highlighting/syntax/: Parser.hpp  Tokens.hpp
src/main/include/editor/highlighting/syntax/syntaxes/: knight.json
src/main/include/scribe/editor/: Editor.hpp
src/main/include/scribe/editor/exceptions/: Exceptions.hpp
src/main/include/scribe/editor/highlighting/: Highlighting.hpp
src/main/include/scribe/editor/highlighting/syntax/: Parser.hpp
src/main/include/scribe/editor/highlighting/syntaxes/: Knight.hpp
src/main/include/scribe/editor/terminal/: Terminal.hpp
src/test/: CMakeLists.txt
src/test/cpp/: TestMain.cpp
src/test/cpp/editor/: ConfigTest.cpp  RowTest.cpp
